# bl

./: .gitignore  README.md  pyproject.toml
notebooks/: exr.ipynb  gp_poisson.ipynb  osl.ipynb  osl_contour.ipynb
src/bl/: __init__.py  camera.py  curve.py  cycles.py  image.py  light.py  material.py  mesh.py  node_group.py  node_tree.py  object.py  scene.py  text.py  util.py  view_layer.py  volume.py  world.py
