[build-system]
requires = ["setuptools >= 74.0"]

[project]
name = "bl"
version = "0.1.0"
authors = [{ name = "Zihou Ng", email = "stwindfy@gmail.com" }]
description = "Blender Toolkits"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['numpy<2', 'bpy==4.4.0']

[project.optional-dependencies]
tests = ["pytest"]

[tool.pytest.ini_options]
addopts = "-s"
